--- a/areamedica.html
+++ b/areamedica.html
@@ -71,7 +71,7 @@
 									<a href="./areamedica/audiologia.html" class="button button__accent">Scopri di pi&#249;</a>
 								</div>
 								<div class="expanded__media">
-									<img src="./images/abr.jpeg" class="expanded__image">
+									<img alt="Foto ABR" src="./images/abr.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
@@ -87,7 +87,7 @@
 									<a href="./areamedica/rinologia.html" class="button button__accent">Scopri di pi&#249;</a>
 								</div>
 								<div class="expanded__media">
-									<img src="./images/citologia.jpeg" class="expanded__image">
+									<img alt="Foto citologia" src="./images/citologia.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
@@ -103,7 +103,7 @@
 									<a href="./areamedica/endoscopia.html" class="button button__accent">Scopri di pi&#249;</a>
 								</div>
 								<div class="expanded__media">
-									<img src="./images/esami_endoscopici.jpeg" class="expanded__image">
+									<img alt="Foto endoscopia" src="./images/esami_endoscopici.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
@@ -119,7 +119,7 @@
 									<a href="./areamedica/vertigini.html" class="button button__accent">Scopri di pi&#249;</a>
 								</div>
 								<div class="expanded__media">
-									<img src="./images/posturografia.png" class="expanded__image">
+									<img alt="Foto posturografia" src="./images/posturografia.png" class="expanded__image">
 								</div>
 							</div>
 						</div>
