--- a/areamedica/audiologia.html
+++ b/areamedica/audiologia.html
@@ -69,7 +69,7 @@
 									<p class="expanded__text">Esame eseguito in cabina silente, permette di eseguire indagini sulla funzione uditiva.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/audiometria.jpeg" class="expanded__image">
+									<img alt="Foto audiometria" src="../images/audiometria.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
@@ -84,7 +84,7 @@
 									<p class="expanded__text">Vengono eseguiti il Timpanogramma (per lo studio delle forme catarrali dell’orecchio medio) e la ricerca dei Riflessi cocleo – stapediali, sia in ipsi che in contralaterale; può essere utilizzata come test di funzionalità tubarica.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/impedenzometria.jpeg" class="expanded__image">
+									<img alt="Foto impedenzometria" src="../images/impedenzometria.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
@@ -99,7 +99,7 @@
 									<p class="expanded__text">La microscopia permette una diagnosi accurata delle patologie dell’orecchio esterno e medio e offre inoltre la possibilità di curare mediante toilette o medicazioni mirate infezioni auricolari quali micosi o forme purulente.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/otomicroscopia.jpeg" class="expanded__image">
+									<img alt="Foto otomicroscopia" src="../images/otomicroscopia.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
@@ -114,7 +114,7 @@
 									<p class="expanded__text">Sofisticata tecnica di audiometria obiettiva per lo studio delle ipoacusie neurosensoriali che permette una valutazione completa del nervo uditivo dalla coclea ai centri corticali; è un esame non invasivo o doloroso, può essere eseguito anche nell’infanzia, specialmente nella necessità di determinare la soglia uditiva del bambino.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/abr.jpeg" class="expanded__image">
+									<img alt="Foto ABR" src="../images/abr.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
