--- a/areamedica/rinologia.html
+++ b/areamedica/rinologia.html
@@ -67,7 +67,7 @@
 									<p class="expanded__text">Mediante uso di telecamere digitalizzate vengono indagate l’anatomia delle prime vie aeree (fosse nasali, faringe e laringe) e dell’orecchio; si possono usare ottiche flessibili (fibroscopia) o ottiche rigide; sono esami assolutamente non dolorosi, di norma non viene usata anestesia; le immagini vengono salvate su video – cd o su carta fotografica.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/esami_endoscopici.jpeg" class="expanded__image">
+									<img alt="Foto esami endoscopici" src="../images/esami_endoscopici.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
@@ -82,7 +82,7 @@
 									<p class="expanded__text">Sono esami fra loro complementari che permettono lo studio obiettivo della funzionalità respiratoria nasale senza nessun tipo di disturbo per il paziente; sono usate principalmente in previsione di interventi di Settoplastica o Turbinoplastica inferiore o come test per la roncopatia cronica.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/rinometria.jpeg" class="expanded__image">
+									<img alt="Foto rinometria" src="../images/rinometria.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
@@ -97,7 +97,7 @@
 									<p class="expanded__text">Una semplice tecnica diagnostica che però viene eseguita di routine in pochi centri italiani; permette una diagnosi accurata delle patologie nasali, allergiche e non, mediante lo studio della cellularità nasale; non è una metodica dolorosa e non necessita di anestesia.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/citologia.jpeg" class="expanded__image">
+									<img alt="Foto citologia" src="../images/citologia.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
