--- a/areamedica/vertigini.html
+++ b/areamedica/vertigini.html
@@ -69,7 +69,7 @@
 									<p class="expanded__text">Un sistema diagnostico per lo studio delle vertigini, completo e obiettivo, con uso di telecamere oculari ad infrarossi; esame assolutamente non traumatico – possono essere eseguiti una decina di test per l’approfondimento di tali patologie; l’integrazione con la sedia elettronica rotatoria permette inoltre lo studio delle fisiologiche stimolazioni a cui quotidianamente il nostro sistema dell’equilibrio viene sottoposto; risulta anche di estrema utilità nella terapia riabilitativa di tali patologie.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/videonistagmografia.jpeg" class="expanded__image">
+									<img alt="Foto videonistagmografia" src="../images/videonistagmografia.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
@@ -84,7 +84,7 @@
 									<p class="expanded__text">VEMPs (Vestibular Evoked Myogenic Potentials): metodica che permette un importante approfondimento diagnostico nelle patologie vertiginose, non invasiva o dolorosa, può essere eseguita anche in età pediatrica.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/vemps.jpeg" class="expanded__image">
+									<img alt="Foto VEMPs" src="../images/vemps.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
@@ -99,7 +99,7 @@
 									<p class="expanded__text">Sotto controllo di personale specializzato e con l’ausilio di numerose attrezzature permette di curare gli esiti di patologie del vestibolo, periferiche e parzialmente anche centrali, e i disturbi dell’equilibri</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/rieducazione.jpeg" class="expanded__image">
+									<img alt="Foto rieducazione" src="../images/rieducazione.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
@@ -114,7 +114,7 @@
 									<p class="expanded__text">Esame eseguito su pedana stabilometrica per lo studio dei disturbi dell’equilibrio legato a deficit posturali; nell’esame standard, mediante cinque test, vengono analizzate la capacità di controllo dell’equilibrio e la stabilità posturale del paziente soggetto in situazioni stabili o non stabili, attraverso interposizione di cuscino in gomma piuma, con e senza aiuto visivo; grazie alla metodica Visual Feedback risulta inoltre estremamente utile nella rieducazione vestibolare e posturale.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/posturografia.png" class="expanded__image">
+									<img alt="Foto posturografia" src="../images/posturografia.png" class="expanded__image">
 								</div>
 							</div>
 						</div>
