--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
 							Canale 18 del digitale terrestre e in Streaming su <a href="www.telecolor.net/tv-diretta" class="link">telecolor.net/tv-diretta</a><br><br>In studio il dott. Paolo Bari e il dott. Fabio Fontana</p>
 				</div>
 				<div class="expanded__media">
-				<img src="./images/news1.png" class="expanded__image">
+				<img alt="Foto News 1" src="./images/news1.png" class="expanded__image">
 				</div>
 			</div>
 		</div>
