--- a/contatti.html
+++ b/contatti.html
@@ -55,7 +55,7 @@
 				<div class="step">
 				<h2>Vicenza</h2>
 					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11177.005983295054!2d11.5141766!3d45.5452661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40ef0466e1b44389!2sCentro%20di%20Medicina!5e0!3m2!1sit!2sit!4v1622280084719!5m2!1sit!2sit" style="border:none;"></iframe> 
+						 <iframe title="Studio Vicenza" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11177.005983295054!2d11.5141766!3d45.5452661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40ef0466e1b44389!2sCentro%20di%20Medicina!5e0!3m2!1sit!2sit!4v1622280084719!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
 					<p><b>Centro di Medicina Vicenza</b><br>Telefono: 0444 282626</p>
 					<a href="contatti/vicenza.html" class="button button__accent">Prenota ora</a>
@@ -63,7 +63,7 @@
 				<div class="step">
 					<h2>Bassano</h2>
 					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11133.37076729063!2d11.7177881!3d45.764322!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7d3da05937dc288d!2sCentro%20Medico%20Riabilitativo%20-%20Centro%20di%20medicina%20Bassano%20del%20Grappa!5e0!3m2!1sit!2sit!4v1622280236818!5m2!1sit!2sit" style="border:none;"></iframe> 
+						 <iframe title="Studio Bassano" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11133.37076729063!2d11.7177881!3d45.764322!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7d3da05937dc288d!2sCentro%20Medico%20Riabilitativo%20-%20Centro%20di%20medicina%20Bassano%20del%20Grappa!5e0!3m2!1sit!2sit!4v1622280236818!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
         			<p><b>Centro di Medicina di Bassano del Grappa</b><br>Telefono: 0424 509845</p>
 					<a href="contatti/bassano.html" class="button button__accent">Prenota ora</a>
@@ -71,7 +71,7 @@
 				<div class="step">
 					<h2>Schio</h2>
 					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11144.204935977836!2d11.357972!3d45.710009!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x568c7c3c46165577!2sCampusalute%20Schio!5e0!3m2!1sit!2sit!4v1622280340576!5m2!1sit!2sit" style="border:none;"></iframe> 
+						 <iframe title="Studio Schio" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11144.204935977836!2d11.357972!3d45.710009!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x568c7c3c46165577!2sCampusalute%20Schio!5e0!3m2!1sit!2sit!4v1622280340576!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
         			<p><b>Campusalute Schio</b><br>Telefono: 0445 523779</p>
 					<a href="contatti/schio.html" class="button button__accent">Prenota ora</a>
