--- a/contatti/schio.html
+++ b/contatti/schio.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="../images/schio.jpeg" class="expanded__image">
+					<img alt="Foto studio Schio" src="../images/schio.jpeg" class="expanded__image">
 				</div>
 				<div class="expanded__content">
 					<h2>Campusalute Schio</h2>
