--- a/contatti/vicenza.html
+++ b/contatti/vicenza.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="../images/vicenza.jpeg" class="expanded__image">
+					<img alt="Foto studio Vicenza" src="../images/vicenza.jpeg" class="expanded__image">
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Centro di Medicina Vicenza</h2>
