--- a/dottore.html
+++ b/dottore.html
@@ -49,7 +49,7 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="./images/dott.png" class="expanded__image">
+					<img alt="Foto dottore" src="./images/dott.png" class="expanded__image">
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Dott. Paolo Bari</h2>
