--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="steps__inner">
 				<div class="step">
 					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11177.005983295054!2d11.5141766!3d45.5452661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40ef0466e1b44389!2sCentro%20di%20Medicina!5e0!3m2!1sit!2sit!4v1622280084719!5m2!1sit!2sit" style="border:none;"></iframe> 
+						 <iframe title="Studio Vicenza" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11177.005983295054!2d11.5141766!3d45.5452661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40ef0466e1b44389!2sCentro%20di%20Medicina!5e0!3m2!1sit!2sit!4v1622280084719!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
 					<h3>Vicenza</h3>
 					<p>Centro di Medicina Vicenza<br>Telefono: 0444 282626</p>
@@ -80,7 +80,7 @@
 				</div>
 				<div class="step">
 					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11133.37076729063!2d11.7177881!3d45.764322!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7d3da05937dc288d!2sCentro%20Medico%20Riabilitativo%20-%20Centro%20di%20medicina%20Bassano%20del%20Grappa!5e0!3m2!1sit!2sit!4v1622280236818!5m2!1sit!2sit" style="border:none;"></iframe> 
+						 <iframe title="Studio Bassano" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11133.37076729063!2d11.7177881!3d45.764322!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7d3da05937dc288d!2sCentro%20Medico%20Riabilitativo%20-%20Centro%20di%20medicina%20Bassano%20del%20Grappa!5e0!3m2!1sit!2sit!4v1622280236818!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
 					<h3>Bassano</h3>
 					<p>Centro di Medicina di Bassano del Grappa<br>Telefono: 0424 509845</p>
@@ -88,7 +88,7 @@
 				</div>
 				<div class="step">
 					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11144.204935977836!2d11.357972!3d45.710009!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x568c7c3c46165577!2sCampusalute%20Schio!5e0!3m2!1sit!2sit!4v1622280340576!5m2!1sit!2sit" style="border:none;"></iframe> 
+						 <iframe title="Studio Schio" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11144.204935977836!2d11.357972!3d45.710009!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x568c7c3c46165577!2sCampusalute%20Schio!5e0!3m2!1sit!2sit!4v1622280340576!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
 					<h3>Schio</h3>
 					<p>Campusalute Schio<br>Telefono: 0445 523779</p>
@@ -102,7 +102,7 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="./images/dott.png" class="expanded__image">
+					<img alt="Foto dottore" src="./images/dott.png" class="expanded__image">
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Dott. Paolo Bari</h2>
@@ -119,7 +119,7 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="./images/area2.png" class="expanded__image">
+					<img alt="Foto area medica" src="./images/area2.png" class="expanded__image">
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Area Medica</h2>
@@ -134,7 +134,7 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="./images/blog.svg" class="expanded__image">
+					<img alt="Foto blog" src="./images/blog.svg" class="expanded__image">
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Blog</h2>
