--- a/areamedica/endoscopia.html
+++ b/areamedica/endoscopia.html
@@ -66,7 +66,7 @@
 									<p class="expanded__text">Mediante uso di telecamere digitalizzate vengono indagate l’anatomia delle prime vie aeree (fosse nasali, faringe e laringe) e dell’orecchio; si possono usare ottiche flessibili (fibroscopia) o ottiche rigide; sono esami assolutamente non dolorosi, di norma non viene usata anestesia; le immagini vengono salvate su video – cd o su carta fotografica.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/fibroendoscopia.jpeg" class="expanded__image">
+									<img alt="Foto fibroendoscopia" src="../images/fibroendoscopia.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
