--- a/contatti/bassano.html
+++ b/contatti/bassano.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="../images/bassano.jpeg" class="expanded__image">
+					<img alt="Foto studio Bassano" src="../images/bassano.jpeg" class="expanded__image">
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Centro di Medicina di Bassano del Grappa</h2>
