--- a/areamedica/rinologia.html
+++ b/areamedica/rinologia.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Rinologia - Dott. Paolo Bari</title>
 	<meta class="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
 	<meta name="description" content="Area di rinologia" />
     <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,area medica,area,medica,terapie,audiologia,prestazioni,visite,specilistiche,visite specialistiche,rinologia,esami endoscopici,rinometria,rinomanometria acustica,citologia nasale" />
 	<link rel="stylesheet" type="text/css" href="../css/style_min.css" />
@@ -124,24 +124,24 @@
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
-							Creato da <a href="https://github.com/cescomuch" target="_blank" class="footer__link">Francesco Bari</a>
+							Creato da <a href="https://github.com/cescomuch" target="_blank" rel="noopener" class="footer__link">Francesco Bari</a>
 						</div>
-						<div class="footer__row">Under <a href="https://opensource.org/licenses/MIT" target="_blank" class="footer__link">MIT License</a>
-						</div>
-					</div>
-					<div class="footer__data__item">
-						<div class="footer__row">Creato per <a href="https://centrodimedicina.com/professionista/paolo-bari/" target="_blank" class="footer__link">Dott. Paolo Bari</a>
+						<div class="footer__row">Under <a href="https://opensource.org/licenses/MIT" target="_blank" rel="noopener" class="footer__link">MIT License</a>
 						</div>
 					</div>
 					<div class="footer__data__item">
+						<div class="footer__row">Creato per <a href="https://centrodimedicina.com/professionista/paolo-bari/" target="_blank" rel="noopener" class="footer__link">Dott. Paolo Bari</a>
+						</div>
+					</div>
+					<div class="footer__data__item">
 					<div class="footer__row">
-						<a href="https://www.facebook.com/dottpaolobari" target="_blank" class="footer__link">Facebook</a>
+						<a href="https://www.facebook.com/dottpaolobari" target="_blank" rel="noopener" class="footer__link">Facebook</a>
 					</div>
 					<div class="footer__row">
-						<a href="https://www.youtube.com/channel/UCd4-XeA3HAjIxcp7IzF8m9g" target="_blank" class="footer__link">YouTube</a>
+						<a href="https://www.youtube.com/channel/UCd4-XeA3HAjIxcp7IzF8m9g" target="_blank" rel="noopener" class="footer__link">YouTube</a>
 					</div>
 					<div class="footer__row">
-						<a href="https://www.facebook.com/Centrodimedicina" target="_blank" class="footer__link">Centro di Medicina</a>
+						<a href="https://www.facebook.com/Centrodimedicina" target="_blank" rel="noopener" class="footer__link">Centro di Medicina</a>
 					</div>
 				</div>
 			</div>
