--- a/contatti/bassano.html
+++ b/contatti/bassano.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Bassano,contatti,numero,dove lavora,studio,studio Bassano,dottor Bari,Bassano" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="../css/style_min.css" />
-	<link rel="icon" type="image/gif" href="images/icon.svg" />
+	<link rel="icon" type="image/gif" href="../images/icon.svg" />
 </head>
 <body>
 	<!-- navbar -->
