--- a/blog.html
+++ b/blog.html
@@ -48,8 +48,9 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__content">
-					<h2 class="expanded__title">Variazione Sede Ambulatoriale</h2>
-						<p class="expanded__text">Dal primo giugno cesser&#224; l’attività presso il centro Diaz.
+					<h2 class="expanded__title">Variazione Sede Ambulatoriale <b>(NEWS)</b></h2>
+					<h6>Postato il 08-09-2021</h6>
+						<p class="expanded__text">Dal 1 Giugno 2021 cesser&#224; l’attività presso il centro Diaz.
 							<br><br>Il Dott. Paolo Bari proseguirà la sua attività ambulatoriale presso i seguenti centri:<br><br>
 
 						CENTRO DI MEDICINA VICENZA<br>
@@ -78,9 +79,9 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__content">
-					<h2 class="expanded__title">Inquinamento e Disturbi dell'Apprendimento</h2>
-						<p class="expanded__text">Luned&#236; 22 Marzo - Ore 22 <br><br>
-							Canale 18 del digitale terrestre e in Streaming su <a href="www.telecolor.net/tv-diretta" class="link">telecolor.net/tv-diretta</a><br><br>In studio il dott. Paolo Bari e il dott. Fabio Fontana</p>
+					<h2 class="expanded__title">Inquinamento e Disturbi dell'Apprendimento <b>(NEWS)</b></h2>
+						<h6>Postato il 08-09-2021</h6>
+						<p class="expanded__text">Luned&#236; 22 Marzo - Ore 22 - su Canale 18 del digitale terrestre e in Streaming su <a href="www.telecolor.net/tv-diretta" class="link">telecolor.net/tv-diretta</a><br><br>In studio il dott. Paolo Bari e il dott. Fabio Fontana</p>
 				</div>
 				<div class="expanded__media">
 				<img alt="Foto News 1" src="./images/news1.png" class="expanded__image">
@@ -92,9 +93,9 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__content">
-					<h2 class="expanded__title">Sindromi Parkinsoniane</h2>
-						<p class="expanded__text">"Innovazioni Riabilitative"<br><br>
-						Canale Italia 10-06-2020<br><br>
+					<h2 class="expanded__title">Sindromi Parkinsoniane <b>(VIDEO)</b></h2>
+					<h6>Postato il 08-09-2021</h6>
+						<p class="expanded__text">"Innovazioni Riabilitative" - Canale Italia 10-06-2020<br><br>
 						In studio Dott. Paolo Bari, Dott. Fabio Fontana, Dott.ssa De Armas</p>
 						<a href="https://www.youtube.com/watch?v=8upZ8XkVKZo" class="button button__accent">Scopri di pi&#249;</a>
 				</div>
@@ -105,7 +106,8 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__content">
-					<h2 class="expanded__title">Vertigini e Instabilit&#224;: nuove prospettive terapeutiche</h2>
+					<h2 class="expanded__title">Vertigini e Instabilit&#224;: nuove prospettive terapeutiche <b>(VIDEO)</b></h2>
+					<h6>Postato il 08-09-2021</h6>
 						<p class="expanded__text">Mercoledì 11 Marzo 2020 alle ore 20, in diretta, trasmissione televisiva su Canale Italia “Sulle ali della salute” – canale 83 del digitale terrestre, 913 di Sky.<br><br>
 						Ospiti in studio il Dott. Paolo Bari e il Dott. Fabio Fontana. Parleranno di “Vertigini e instabilità: nuove prospettive terapeutiche”<br><br>
 						Conduce il Dott. Stefano Mion. Possibilità di intervenire in diretta, durante la trasmissione.</p>
@@ -114,7 +116,77 @@
 			</div>
 		</div>
 	</div>
-
+	<div class="expanded landing__section__medicine">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__content">
+					<h2 class="expanded__title">Riniti Vasomotorie <b>(VIDEO)</b></h2>
+					<h6>Postato il 08-09-2021</h6>
+						<p class="expanded__text">Trasmissione “Sulle ali della salute” (Canale Italia) 24-04-2019<br><br>In studio Dott. Paolo Bari, Dott. Enrico Minchella.</p>
+						<a href="https://www.youtube.com/watch?v=pAmsvaLevc8" class="button button__accent">Scopri di pi&#249;</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="expanded landing__section__medicine__inverse">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__content">
+					<h2 class="expanded__title">Vertigini e Acufeni <b>(VIDEO)</b></h2>
+					<h6>Postato il 08-09-2021</h6>
+						<p class="expanded__text">Trasmissione “Sulle ali della salute” (Canale Italia) 08-05-2019<br><br>In studio il Dott. Paolo Bari.</p>
+						<a href="https://www.youtube.com/watch?v=jVGwGQTyANc" class="button button__accent">Scopri di pi&#249;</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="expanded landing__section__medicine">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__content">
+					<h2 class="expanded__title">Vertigine Posizionale Parossistics <b>(ARTICOLO)</b></h2>
+					<h6>Postato il 11-09-2016</h6>
+						<p class="expanded__text">Leggi l'articolo in versione PDF</p>
+						<a href="./asset/vertigine-parossistica.pdf" class="button button__accent">Leggi PDF</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="expanded landing__section__medicine__inverse">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__content">
+					<h2 class="expanded__title">Vertigini e disturbi dell'equilibrio - Innovazioni diagnostiche <b>(ARTICOLO)</b></h2>
+					<h6>Postato il 10-08-2016</h6>
+						<p class="expanded__text">Leggi l'articolo in versione PDF</p>
+						<a href="./asset/innovazioni-diagnostiche.pdf" class="button button__accent">Leggi PDF</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="expanded landing__section__medicine">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__content">
+					<h2 class="expanded__title">Disturbi della comunicazione: Patologie di interesse foniatrico – logopedico <b>(ARTICOLO)</b></h2>
+					<h6>Postato il 08-03-2015</h6>
+						<p class="expanded__text">Leggi l'articolo in versione PDF</p>
+						<a href="./asset/disturbi-comunicazione.pdf" class="button button__accent">Leggi PDF</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="expanded landing__section__medicine__inverse">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__content">
+					<h2 class="expanded__title">Le flogosi auricolari nel periodo estivo <b>(ARTICOLO)</b></h2>
+					<h6>Postato il 06-07-2010</h6>
+						<p class="expanded__text">(ovvero un semplice ma doloroso modo di rovinarsi le vacanze)<br><br>Le flogosi auricolari (comunemente dette otiti) risultano essere una delle più comuni e frequenti malattie infiammatorie che colpiscono l’uomo dalla primissima infanzia fino alla tarda età; capire di essere affetti da una otite è per tutti noi purtroppo molto semplice, per la comparsa di sintomi caratteristici (dolore auricolare, senso di ovattamento, gonfiore auricolare, secrezioni dall’orecchio…); al contrario nel cercare di risolvere la sintomatologia nell’attesa della visita di un medico o di uno specialista O.R.L. spesso veniamo assaliti da mille dubbi: che antidolorifico prendo, posso mettere le gocce nell’orecchio, dovrò prendere l’antibiotico?..<br><br>Nel periodo estivo le otiti più frequenti sono quelle “esterne”, risultano a volte di difficile cura, con frequenti recidive. L’area anatomica più frequentemente in causa è il condotto uditivo esterno, regione che collega il padiglione auricolare alla membrana timpanica: questa struttura è provvista di un delicato sistema di pulizia che spontaneamente porta all’esterno le secrezioni auricolari; la raccomandazione ad esempio di non usare per la pulizia dell’orecchio nessun corpo estraneo nel condotto uditivo (cotton – fioc!) deriva proprio dalla facilità di alterare l’integrità delle pareti del condotto stesso e ostacolare questo determinante meccanismo di toilette<br><br>Nei periodi estivi, con l’aumento delle temperature e elevati tassi di umidità, “i nodi vengono al pettine”: se le pareti del nostro condotto non sono ben integre o vi è una alterazione del meccanismo “automatico” di pulizia la possibilità di insorgenza di questa infiammazione aumenta notevolmente<br><br>In caso di otite “esterna” la prima cosa che compare è il dolore auricolare: come del resto in tutti i tipi di otiti è consigliato l’uso di un antidolorifico per via generale, ad esempio il paracetamolo: normalmente la flogosi del condotto esterno si risolve spontaneamente in giornata e sarà sufficiente evitare l’esposizione all’acqua ed evitare di toccare l’orecchio in attesa di una valutazione medica; non sono necessarie gocce otologiche se non successivamente su consiglio medico<br><br>Alcune persone sono sicuramente più esposte all’insorgenza delle otiti esterne, all’esempio le persone allergiche, le persone che anche nei periodi invernali frequentano assiduamente le piscine, individui che usano tappi di protezione auricolare al lavoro o per dormire; comuni alterazioni ematochimiche quali aumento del colesterolo dei trigliceridi o della glicemia o l’alterazione della funzionalità di alcuni organi quali ad esempio il fegato possono essere fattori predisponenti nell’insorgenza dell’infiammazione auricolare esterna e spesso concorrono a cronicizzarla.<br><br>Alcune volte in seguito a ripetute infiammazioni del condotto o nei pazienti sopraindicati la guarigione da queste otiti necessita di un trattamento terapeutico specifico e prolungato: per quanto possa risultare strano l’uso di un antibiotico per via generale non è assolutamente la terapia di prima scelta (anche se purtroppo è di uso comune); la mia esperienza è nell’usare per qualche giorno (due – tre) un cortisonico per via generale (in assenza di particolari controindicazioni), sfuttando oltre che l’azione antinfiammatoria l’azione antiedemigena del farmaco, associato a gocce otologiche contenenti unicamente antibiotico senza cortisone per non peggiorare una eventuale infezione micotica concomitante; senza grosse controindicazioni si possono eseguire instillazioni auricolari tiepide di Acido borico al 3% mediante piccola siringa senz’ago sia come azione disinfettante che detergente.<br><br>Nel rivolgersi ad uno specialista ORL la scelta dovrebbe andare verso un professionista che comunemente usa un sistema di otomicroscopia in ambulatorio: in questi casi il lavaggio auricolare è assolutamente da evitare mentre una accurata toilette auricolare sotto controllo microscopico è la base per una completa e “duratura” guarigione.<br><br>La prevenzione come al solito è importante: soggetti che negli anni precedenti hanno sofferto di questi tipi di otite dovrebbero sottoporsi a controllo otomicroscopico ORL: la rimozione di eventuali tappi di cerume, la correzione mediante uso di sostanze locali dell’integrità delle pareti del condotto, permettono normalmente di partire tranquilli verso la nostra meritata vacanza</p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="cta cta--reverse">
 		<div class="container">
 			<div class="cta__inner">
