--- a/dottore.html
+++ b/dottore.html
@@ -104,6 +104,7 @@ Ha partecipato come relatore a numerosi congressi nazionali e internazionali, ri
 			</div>
 		</div>
 	</div>
+</div>
 <script src='js/app_min.js'></script>
 </body>
 </html>
