--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='it'>
 <head>
 	<title>Homepage - Dott. Paolo Bari</title>
-	<meta class="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
 	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
     <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dott paolo bari,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,dottor Bari,centro medicina,centro medicina vicenza" />
