--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dott paolo bari,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,dottor Bari,centro medicina,centro medicina vicenza" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="css/style_min.css" />
-	<link rel="icon" type="image/gif" href="images/icon.svg" />
+	<link rel="icon" type="img" href="images/icon.svg" />
 	<!-- Global site tag (gtag.js) - Google Analytics -->
   	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-200627659-1"></script>
   	<script>
