--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
     <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dott paolo bari,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,dottor Bari,centro medicina,centro medicina vicenza" />
     <meta name="author" content="Francesco Bari" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon"></link>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"></link>
+	<link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon"></link>
+	<link rel="icon" href="favicon.ico" type="image/x-icon"></link>
 	<link rel="stylesheet" type="text/css" href="css/style_min.css" />
-	<link rel="icon" type="icon" href="images/icon.png" />
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
   	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-200627659-1"></script>
   	<script>
