--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
 	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dott paolo bari,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,dottor Bari,centro medicina,centro medicina vicenza" />
+    <meta name="keywords" content="paolo,bari,paolo bari,otorino vicenza,Paolo,Bari,Paolo Bari,dottor,dott paolo bari,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,dottor Bari,centro medicina,centro medicina vicenza" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="css/style_min.css" />
 	<link rel="icon" type="image/gif" href="images/icon.svg" />
